--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
 
         <br />
         <br />
-        <h4>Pertemuan 1</h4>
+        <h4>Pertemuan 1 - 3</h4>
         <a href="pertemuan1/latheading.HTML">latheading.html</a>
         <br />
-        <a href="pertemuan1/latformat.html">latformat.html</a>
+        <a href="pertemuan1/lattulisan.html">lattulisan.html</a>
         <br />
         <a href="pertemuan1/latparagraf.html">latparagraf.html</a>
+        <br />
+        <a href="pertemuan2/latfont.html">latfont.html</a>
+        <br />
+        <a href="pertemuan2/latlink.html">latlink.html</a>
+        <br />
+        <a href="pertemuan2/latpenomoran.html">latpenomoran.html</a>
+        <br />
+        <a href="pertemuan2/latgambar.html">latgambar.html</a>
     </body>
 </html>
