--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
         <h3>Nama : Ella Aisia_NPM : 23441031</h3>
         <h3>Program Studi : Sistem Informasi</h3>
         <h3>Kelas : SI-A</h3>
-
-
+        
         <br />
-        <br />
-        <h4>Pertemuan 1 - 3</h4>
+        <h4>Pertemuan 1</h4>
         <a href="pertemuan1/latheading.HTML">latheading.html</a>
         <br />
         <a href="pertemuan1/lattulisan.html">lattulisan.html</a>
         <br />
         <a href="pertemuan1/latparagraf.html">latparagraf.html</a>
         <br />
+        <h4>Pertemuan 2</h4>
         <a href="pertemuan2/latfont.html">latfont.html</a>
         <br />
         <a href="pertemuan2/latlink.html">latlink.html</a>
         <br />
         <a href="pertemuan2/latpenomoran.html">latpenomoran.html</a>
         <br />
-        <a href="pertemuan2/latgambar.html">latgambar.html</a>
+        <a href="pertemuan2/latihan2.html">latihan2.html</a>
+        <br />
+        <h4>Tugas Teori Pertemuan 1</h4>
+        <h4>Eron Garfil_NPM: 23441035</h4>
+        <a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf">Teori Desain Web Pertemuan1_Eron Garfil.pdf</a>
+        <h4>Ella Aisia_NPM : 23441031</h4>
+        <a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf">Teori Desain Web Pertemuan1_Ella Aisia.pdf</a>
     </body>
 </html>
