--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <br />
         <a href="pertemuan2/latihan2.html">latihan2.html</a>
         <br />
+        <h4>pertemuan 3</h4>
+        <a href="pertemuan3/lattabel.html">lattabel.html</a>
+        <br />
+        <a href="pertemuan3/latframesetl">latframeset.html</a>
         <h4>Tugas Teori Pertemuan 1</h4>
         <h4>Eron Garfil_NPM: 23441035</h4>
         <a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf">Teori Desain Web Pertemuan1_Eron Garfil.pdf</a>
