--- a/pertemuan3/latframeset.html
+++ b/pertemuan3/latframeset.html
@@ -1,4 +1,6 @@
-</head>
+<html>
+    <head><title>aaa</title>
+    </head>
     <frameset cols="40%,*">
          <frame src="../pertemuan1/latparagraf.html" />
         <frameset rows="25%,*">
