--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
         <title>Desain Web - Eron Garfil & Ella Aisia</title>
     </head>
     <body>
-        <h4>Nama : Eron Garfil_NPM : 23441035</h4>
-        <h4>Nama : Ella Aisia_NPM : 23441031</h4>
-        <h4>Program Studi : Sistem Informasi</h4>
-        <h4>Kelas : SI-A (PAGI)</h4>
+        <h3>Nama : Eron Garfil_NPM : 23441035</h3>
+        <h3>Nama : Ella Aisia_NPM : 23441031</h3>
+        <h3>Program Studi : Sistem Informasi</h3>
+        <h3>Kelas : SI-A (PAGI)</h3>
         <br />
-        <h4>Pertemuan 1 : </h4>
+        <br />
+        <h3>Pertemuan 1 : </h3>
         <a href="pertemuan1/latheading.HTML">latheading.html</a></br>
         <a href="pertemuan1/lattulisan.html">lattulisan.html</a></br>
-        <a href="pertemuan1/latparagraf.html">latparagraf.html</a></h4>
+        <a href="pertemuan1/latparagraf.html">latparagraf.html</a>
         <br />
         <br />
-        <h4>Pertemuan 2 : </h4>
+        <h3>Pertemuan 2 : </h3>
         <a href="pertemuan2/latfont.html">latfont.html</a></br>
         <a href="pertemuan2/latlink.html">latlink.html</a></br>
         <a href="pertemuan2/latpenomoran.html">latpenomoran.html</a></br>
         <a href="pertemuan2/latihan2.html">latihan2.html</a>
         <br />
         <br />
-        <h4>pertemuan 3 : </h4>
+        <h3>pertemuan 3 : </h3>
         <a href="pertemuan3/lattabel.html">lattabel.html</a></br>
-        <a href="pertemuan3/latframeset.html">latframeset.html</a></br>
+        <a href="pertemuan3/latframeset.html">latframeset.html</a>
         <br />
         <br />
-        <h4>Tugas Teori Pertemuan 1</h4>
+        <h3>Tugas Teori Pertemuan 1</h3>
         <h4>-Eron Garfil_NPM: 23441035</h4>
         <a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf">Teori Desain Web Pertemuan1_Eron Garfil.pdf</a>
         <h4>-Ella Aisia_NPM : 23441031</h4>
