--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
         <a href="pertemuan3/latframeset.html">latframeset.html</a>
         <br />
         <br />
+        <h3>pertemuan 4 : </h3>
+        <a href="Pertemuan4/latform.html">latfrom.html</a></br>
+        <a href="Pertemuan4/latRegistrasi.html">latRegistrasi.html</a></br>
+        <br />
+        <br />
         <h3>Tugas Teori Pertemuan 1</h3>
         <h4>-Eron Garfil_NPM: 23441035</h4>
         <a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf">Teori Desain Web Pertemuan1_Eron Garfil.pdf</a>
         <h4>-Ella Aisia_NPM : 23441031</h4>
         <a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf">Teori Desain Web Pertemuan1_Ella Aisia.pdf</a>
+        <br />
+        <br />
     </body>
 </html>
