--- a/index.html
+++ b/index.html
@@ -1,43 +1,16 @@
-<html>
-    <head>
-        <title>Desain Web - Eron Garfil & Ella Aisia</title>
-    </head>
-    <body>
-        <h3>Nama : Eron Garfil_NPM : 23441035</h3>
-        <h3>Nama : Ella Aisia_NPM : 23441031</h3>
-        <h3>Program Studi : Sistem Informasi</h3>
-        <h3>Kelas : SI-A (PAGI)</h3>
-        <br />
-        <br />
-        <h3>Pertemuan 1 : </h3>
-        <a href="pertemuan1/latheading.HTML">latheading.html</a></br>
-        <a href="pertemuan1/lattulisan.html">lattulisan.html</a></br>
-        <a href="pertemuan1/latparagraf.html">latparagraf.html</a>
-        <br />
-        <br />
-        <h3>Pertemuan 2 : </h3>
-        <a href="pertemuan2/latfont.html">latfont.html</a></br>
-        <a href="pertemuan2/latlink.html">latlink.html</a></br>
-        <a href="pertemuan2/latpenomoran.html">latpenomoran.html</a></br>
-        <a href="pertemuan2/latihan2.html">latihan2.html</a>
-        <br />
-        <br />
-        <h3>pertemuan 3 : </h3>
-        <a href="pertemuan3/lattabel.html">lattabel.html</a></br>
-        <a href="pertemuan3/latframeset.html">latframeset.html</a>
-        <br />
-        <br />
-        <h3>pertemuan 4 : </h3>
-        <a href="Pertemuan4/latform.html">latfrom.html</a></br>
-        <a href="Pertemuan4/latRegistrasi.html">latRegistrasi.html</a></br>
-        <br />
-        <br />
-        <h3>Tugas Teori Pertemuan 1</h3>
-        <h4>-Eron Garfil_NPM: 23441035</h4>
-        <a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf">Teori Desain Web Pertemuan1_Eron Garfil.pdf</a>
-        <h4>-Ella Aisia_NPM : 23441031</h4>
-        <a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf">Teori Desain Web Pertemuan1_Ella Aisia.pdf</a>
-        <br />
-        <br />
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<frameset rows="20%,*,10%">
+    <frame src="judul.html" />
+   <frameset cols="20%,*">
+       <frame src="menu.html"  name="menu"/>
+       <frame src="gabungan.html"  name="content"/>
+   </frameset>
+   <frame src="gabungan.html" />
+</frameset>
 </html>
