--- a/judul.html
+++ b/judul.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Desain Web - Pak Relita</h1>
+    <h1>Desain Web</h1>
 </body>
 </html>
