--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>menu</title>
+    </head>
 <body>
     <ul>
-        <li><a href="pertemuan1/latheading.HTML" target="content">Pertemuan 1 - latihan heading</a></li>
-        <li><a href="pertemuan1/latparagraf.html" target="content">Pertemuan 1 - latihan paragraf</a></li>
-        <li><a href="pertemuan1/lattulisan.html" target="content">Pertemuan 1 - latihan tulisan</a></li>
-        <li><a href="pertemuan2/latfont.html" target="content">Pertemuan 2 - latihan font</a></li>
-        <li><a href="pertemuan2/latihan2.html" target="content">Pertemuan 2 - latihan 2</a></li>
-        <li><a href="pertemuan2/latlink.html" target="content">Pertemuan 2 - latihan link</a></li>
-        <li><a href="pertemuan2/latpenomoran.html" target="content">Pertemuan 2 - latihan penomoran</a></li>
-        <li><a href="pertemuan3/latframeset.html" target="content">Pertemuan 3 - latihan frameset</a></li>
-        <li><a href="pertemuan3/lattabel.html" target="content">Pertemuan 3 - latihan tabel</a></li>
-        <li><a href="pertemuan4/latform.html" target="content">Pertemuan 4 - latihan Form</a></li>
-        <li><a href="pertemuan4/latRegistrasi.html" target="content">Pertemuan 4 - latihan Registrasi</a></li>
+        <ul type="disc">
+            <li>Pertemuan 1
+                <ul>
+                    <li><a href="pertemuan1/latheading.HTML" target="content">Latihan Heading</a></li>
+                    <li><a href="pertemuan1/latparagraf.html" target="content">Latihan Paragraf</a></li>
+                    <li><a href="pertemuan1/lattulisan.html" target="content">Latihan Tulisan</a></li>
+                </ul>
+                <li>Pertemuan 2
+                <ul>
+                    <li><a href="pertemuan2/latfont.html" target="content">Latihan font</a></li>
+                    <li><a href="pertemuan2/latihan2.html" target="content">Latihan 2</a></li>
+                    <li><a href="pertemuan2/latlink.html" target="content">Latihan link</a></li>
+                </ul>
+                <li>Pertemuan 3
+                    <ul>
+                        <li><a href="pertemuan3/latframeset.html" target="content">Latihan frameset</a></li>
+                        <li><a href="pertemuan3/lattabel.html" target="content">Latihan table</a></li>
+                    </ul>
+                 <li>Pertemuan 4
+                     <ul>
+                            <li><a href="pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
+                            <li><a href="pertemuan4/latform.html" target="content">Latihan From</a></li>
+                </ul>  
+            <li><b>Latihan : </b>
+              <ul>
+                  <li><a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf" target="content">Latihan teori ERON GARFIL</a></li>
+                  <li><a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf" target="content">Latihan teori ELLA AISIA</a></li>
+            </li>
+        </ul>
+    </body>
+    </html>
     </ul>
 </body>
