--- a/menu.html
+++ b/menu.html
@@ -27,8 +27,8 @@
                     </ul>
                  <li>Pertemuan 4
                      <ul>
-                            <li><a href="pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
-                            <li><a href="pertemuan4/latform.html" target="content">Latihan From</a></li>
+                            <li><a href="Pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
+                            <li><a href="Pertemuan4/latform.html" target="content">Latihan From</a></li>
                 </ul>  
             <li><b>Latihan : </b>
               <ul>
