--- a/footer.html
+++ b/footer.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h3{
-            color: rgb(149, 173, 149);
-            font-size: 3rem;
+        body{
+            background-color: rgb(15, 151, 76);
         }
-            
-        h4,p {
-            color : rgb(10, 10, 10);
-            background-color: rgb(100, 121, 100);
+        .flex{
+            display:flex ;
         }
-    </style>
-</head>
-    <footer>
-        <h4>Dibuat Oleh : </h4>
-        <ul>
-            <li><h5>Eron Garfil _ 23441035</li></h5>
-            <li><h5>Ella Aisia _ 23441031</li></h5>
-            <li><h5>Kelas : SI-A (pagi)</li></h5>
-        </ul>
-        <p><a href="https://ellaaisia1.github.io/Desain-Web1/" target="_">ink Github Tugas Desain Web Eron Garfil & Ella Aisia</a></p>
-        <p><a href="gabungan.html" name="content">Link Biodata Diri</a></p>
+        .fd-row{
+            flex-direction: row;
+            gap: 100px;
+        }
+        .fd-col{
+            flex-direction: column;
+        }
+        </style>
+        <body>
+            <div class="flex fd-row">
+                <div class="flex fd-col">
+                    <h2><b>ERON GARVIL <br> 23441035</b></h2>
+                    <img src="eron.jpg" width="200" height="200">
+                </div>
+                <div class="flex fd-col">
+                    <h2><b>ELLA AISIA <br> 23441031</b></h2>
+                    <img src="lala.jpg" width="200" height="200" align="right">
+            </div>
+        </body>
     </footer>
