--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<frameset rows="20%,*,10%">
-    <frame src="judul.html" />
+<frameset rows="20%,*,25%" frameborder="0">
+    <frame src="judul.html" scrolling="no" </frame>
    <frameset cols="20%,*">
-       <frame src="menu.html"  name="menu"/>
-       <frame src="depan.html"  name="content"/>
+       <frame src="menu.html"  name="menu">menu</frame>
+       <frame src="depan.html"  name="content"></frame>
    </frameset>
-   <frame src="footer.html" />
+   <frame src="footer.html" />biodata</frame>
 </frameset>
 </html>
