--- a/judul.html
+++ b/judul.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Desain Web</h1>
+    <body>
+        <div style="padding-left:25px; padding-top: 25px;height:100px; background-color:rgb(15, 151, 76); width:100%;">
+        <h1><B>TUGAS DESAIN WEB ERON GARFIL & ELLA AISIA</h1></B>
+        </div>
 </body>
 </html>
