--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
     </head>
+    <style>
+        body{
+            background-color: rgb(15, 151, 76);
+        }
+    </style>
 <body>
     <ul>
         <ul type="disc">
@@ -27,8 +32,8 @@
                     </ul>
                  <li>Pertemuan 4
                      <ul>
-                            <li><a href="Pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
-                            <li><a href="Pertemuan4/latform.html" target="content">Latihan From</a></li>
+                        <li><a href="Pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
+                        <li><a href="Pertemuan4/latform.html" target="content">Latihan From</a></li>
                 </ul>  
             <li><b>Latihan : </b>
               <ul>
