--- a/pertemuan1/lattulisan.html
+++ b/pertemuan1/lattulisan.html
@@ -7,8 +7,8 @@
             <b>Tulisan Bold</b><br />
             <i>Cetak Miring</i><br />
             <u>Garis Bawah</u><br />
-            <strikee>Garis Ditengah</strikee><br />
-            <bigg>huruf lebih besar</bigg><br />
+            <strike>Garis Ditengah</strike><br />
+            <big>huruf lebih besar</big><br />
             <small>huruf lebih kecil</small>
             a<sub>a</sub>
             4<sub>2</sub>
