--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <frameset rows="20%,*,25%" frameborder="0">
-    <frame src="judul.html" scrolling="no" </frame>
+    <frame src="indexBaru/judul.html" scrolling="no" </frame>
    <frameset cols="20%,*">
-       <frame src="menu.html"  name="menu">menu</frame>
-       <frame src="depan.html"  name="content"></frame>
+       <frame src="indexBaru/menu.html"  name="menu">menu</frame>
+       <frame src="indexBaru/depan.html"  name="content">depan</frame>
    </frameset>
-   <frame src="footer.html" />biodata</frame>
+   <frame src="indexBaru/footer.html" />biodata</frame>
 </frameset>
 </html>
