--- a/Pertemuan4/latRegistrasi.html
+++ b/Pertemuan4/latRegistrasi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="pertemuan4.css">
 </head>
     <h1 align="center">FROM PENDAFTARAN</h1>
     <h1 align="center">STMIK KAPUTAMA  TA 2024/2025</h1>
