--- a/Pertemuan7/Lathalaman.html
+++ b/Pertemuan7/Lathalaman.html
@@ -1,11 +1,13 @@
+</head> 
+<link rel="stylesheet" href="pertemuan7.css">
 <style type="text/css"> 
-    body 
+  body 
     {
     margin-left:1 cm; 
     margin-right:2 cm; 
     margin-top:1 cm; 
     margin-bottom:1 cm; 
-    background-color:#99FF33;
+    background-color:rgb(167, 180, 201);
  }
     </style> 
     <body> 
