--- a/indexBaru/footer.html
+++ b/indexBaru/footer.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body{
-            background-color: rgb(15, 151, 76);
+            background-color: rgb(64, 143, 143);
         }
         .flex{
             display:flex ;
@@ -22,7 +22,7 @@
         <body>
             <div class="flex fd-row">
                 <div class="flex fd-col">
-                    <h2><b>ERON GARVIL <br> 23441035</b></h2>
+                    <h2><b>ERON GARFIL <br> 23441035</b></h2>
                     <img src="../foto/eron.jpg" width="200" height="200">
                 </div>
                 <div class="flex fd-col">
