--- a/indexBaru/gabungan.html
+++ b/indexBaru/gabungan.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Desain Web - Eron Garfil & Ella Aisia</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <br />
