--- a/indexBaru/menu.html
+++ b/indexBaru/menu.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="../pertemuan2/latfont.html" target="content">Latihan font</a></li>
                     <li><a href="../pertemuan2/latihan2.html" target="content">Latihan 2</a></li>
-                    <li><a href="../pertemuan2/latihan2.html" target="content">Latihan link</a></li>
+                    <li><a href="../pertemuan2/latlink.html" target="content">Latihan link</a></li>
                     <li><a href="../pertemuan2/latpenomoran.html" target="content">Latihan penomoran</a></li>
                 </ul>
                 <li><b>Pertemuan 3
