--- a/pertemuan1/latparagraf.html
+++ b/pertemuan1/latparagraf.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <title>latihan pertemuan 1 paragraf</title>
+            <link rel="stylesheet" href="pertemuan1.css">
         </head>
         <body>
             Contoh Format Text
