--- a/pertemuan1/lattulisan.html
+++ b/pertemuan1/lattulisan.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <title>latihan pertemuan 1 format tulisan</title>
+            <link rel="stylesheet" href="pertemuan1.css">
         </head>
         <body>
             <b>Tulisan Bold</b><br />
