--- a/pertemuan2/latihan2.html
+++ b/pertemuan2/latihan2.html
@@ -1,8 +1,10 @@
+<head>
+<link rel="stylesheet" href="pertemuan2.css">
 <body>
     <p>Gambar Tanpa Format</p>
-    <img src="../doraemon1.jpg" height="100"/>
+    <img src="../foto/doraemon1.jpg" height="100"/>
     <p>Gambar Dengan Format hspace</p>
-    <img src="../doraemon2.jpg" height ="100" hspace="100" />
+    <img src="../foto/doraemon2.jpg" height ="100" hspace="100" />
     <p>Gambar Dengan Border</p>
-    <img src="../doraemon3.jpg" border="2" height="100"/>
+    <img src="../foto/doraemon3.jpg" border="2" height="100"/>
 </body>
