--- a/pertemuan2/latlink.html
+++ b/pertemuan2/latlink.html
@@ -1,3 +1,8 @@
+<!DOCTYPE HTML>
+<head>
+     <title></title>
+<link rel="stylesheet" href="pertemuan2.css">
+</head>
 <body>
     <a href="lattulisan.html">Klik Disini Untuk Melihat Latihan Satu</a>
     <br />
