--- a/pertemuan3/latframeset.html
+++ b/pertemuan3/latframeset.html
@@ -1,3 +1,7 @@
+<!DOCTYPE HTML>
+<head>
+     <title>LATIHAN PERTAMA</title>
+<link rel="stylesheet" href="pertemuan3.css">
 </head>
     <frameset cols="40%,*">
          <frame src="../pertemuan1/latparagraf.html" />
