--- a/Pertemuan7/latexternal.html
+++ b/Pertemuan7/latexternal.html
@@ -1,6 +1,6 @@
-</head> 
-    <link rel="stylesheet" type="text/css" 
-    href="fileCSS.CSS" /> 
+<head> 
+    <link rel="stylesheet" href="pertemuan7.css">
 <body> 
     Ini Contoh External Style Sheet 
 </body>
+</head>
