--- a/Pertemuan7/latselectorclass.html
+++ b/Pertemuan7/latselectorclass.html
@@ -1,4 +1,5 @@
 </head> 
+<link rel="stylesheet" href="pertemuan7.css">
     <style type="text/css"> 
     .kelas {
     font-family:"Courier New", Courier, monospace; text-align:center; color:#df1515; 
