--- a/pertemuan1/latheading.HTML
+++ b/pertemuan1/latheading.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
      <title>LATIHAN PERTAMA</title>
-
+<link rel="stylesheet" href="pertemuan1.css">
 </head>
 <body>
     <h1>Heading Satu</h1>
