--- a/pertemuan2/latfont.html
+++ b/pertemuan2/latfont.html
@@ -1,3 +1,8 @@
+<!DOCTYPE HTML>
+<head>
+     <title>LATIHAN PERTAMA</title>
+<link rel="stylesheet" href="pertemuan2.css">
+</head>
     <body>
         <font size="+1">Besar Huruf +1</font><br />
         <font face="Arial, Helvetica ,sans-serif">Jenis Huruf Arial</font><br />
