--- a/pertemuan3/lattabel.html
+++ b/pertemuan3/lattabel.html
@@ -1,3 +1,7 @@
+<!DOCTYPE HTML>
+<head>
+     <title>LATIHAN PERTAMA</title>
+<link rel="stylesheet" href="pertemuan3.css">
 <body>
     <h2 align="center">Daftar Mahasiswa</h2>
     <table border="1">
