--- a/indexBaru/menu.html
+++ b/indexBaru/menu.html
@@ -51,6 +51,14 @@
                   <li><a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf" target="content">Latihan teori ELLA AISIA</a></li>
             </li>
         </ul>
+             <li><b>Pertemuan 9
+            <ul>
+                <li><a href="../Pertemuan9/lat_if.html" target="content">latihan external</a></li>
+                <li><a href="../Pertemuan9/latihan.html" target="content">latihan halaman</a></li>
+                <li><a href="../Pertemuan9/latihan1.html" target="content">latihan selector</a></li>
+                <li><a href="../Pertemuan9/latoperator.html" target="content">latihan selector bebas</a></li>
+                <li><a href="../Pertemuan9/latvar.html" target="content">latihan selector kelas</a></li>
+              </ul>
             </li>
         </li>
         </ul>
