--- a/menu.html
+++ b/menu.html
@@ -7,39 +7,64 @@
     </head>
     <style>
         body{
-            background-color: rgb(15, 151, 76);
+            background-color: rgb(28, 153, 84);
         }
     </style>
 <body>
     <ul>
         <ul type="disc">
-            <li>Pertemuan 1
+                <li><b>Pertemuan 1
                 <ul>
-                    <li><a href="pertemuan1/latheading.HTML" target="content">Latihan Heading</a></li>
-                    <li><a href="pertemuan1/latparagraf.html" target="content">Latihan Paragraf</a></li>
-                    <li><a href="pertemuan1/lattulisan.html" target="content">Latihan Tulisan</a></li>
+                    <li><a href="../pertemuan1/latheading.HTML" target="content">Latihan Heading</a></li>
+                    <li><a href="../pertemuan1/latparagraf.html" target="content">Latihan Paragraf</a></li>
+                    <li><a href="../pertemuan1/lattulisan.html" target="content">Latihan Tulisan</a></li>
                 </ul>
-                <li>Pertemuan 2
+                <li><b>Pertemuan 2
                 <ul>
-                    <li><a href="pertemuan2/latfont.html" target="content">Latihan font</a></li>
-                    <li><a href="pertemuan2/latihan2.html" target="content">Latihan 2</a></li>
-                    <li><a href="pertemuan2/latlink.html" target="content">Latihan link</a></li>
+                    <li><a href="../pertemuan2/latfont.html" target="content">Latihan font</a></li>
+                    <li><a href="../pertemuan2/latihan2.html" target="content">Latihan 2</a></li>
+                    <li><a href="../pertemuan2/latlink.html" target="content">Latihan link</a></li>
+                    <li><a href="../pertemuan2/latpenomoran.html" target="content">Latihan penomoran</a></li>
                 </ul>
-                <li>Pertemuan 3
+                <li><b>Pertemuan 3
                     <ul>
-                        <li><a href="pertemuan3/latframeset.html" target="content">Latihan frameset</a></li>
-                        <li><a href="pertemuan3/lattabel.html" target="content">Latihan table</a></li>
+                        <li><a href="../pertemuan3/latframeset.html" target="content">Latihan frameset</a></li>
+                        <li><a href="../pertemuan3/lattabel.html" target="content">Latihan table</a></li>
                     </ul>
-                 <li>Pertemuan 4
+                 <li><b>Pertemuan 4
                      <ul>
-                        <li><a href="Pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
-                        <li><a href="Pertemuan4/latform.html" target="content">Latihan From</a></li>
-                </ul>  
+                        <li><a href="../Pertemuan4/latRegistrasi.html" target="content">latihan registrasi</a></li>
+                        <li><a href="../Pertemuan4/latform.html" target="content">Latihan From</a></li>
+                    </ul>  
+                <li><b>Pertemuan 7 
+                    <ul>
+                    <li><a href="../Pertemuan7/latexternal.html" target="content">latihan external</a></li>
+                    <li><a href="../Pertemuan7/Lathalaman.html" target="content">latihan halaman</a></li>
+                    <li><a href="../Pertemuan7/latselector.html" target="content">latihan selector</a></li>
+                    <li><a href="../Pertemuan7/latselectorbebas.html" target="content">latihan selector bebas</a></li>
+                    <li><a href="../Pertemuan7/latselectorclass.html" target="content">latihan selector kelas</a></li>
+                    <li><a href="../Pertemuan7/latselectorid.html" target="content">latihan selector ID</a></li>
+        </ul>
+             <li><b>Pertemuan 9
+            <ul>
+                <li><a href="../Pertemuan9/lat_if.html" target="content">latihan if</a></li>
+                <li><a href="../Pertemuan9/latihan.html" target="content">latihan latihan</a></li>
+                <li><a href="../Pertemuan9/latihan1.html" target="content">latihan 1</a></li>
+                <li><a href="../Pertemuan9/latoperator.html" target="content">latihan operator</a></li>
+                <li><a href="../Pertemuan9/latvar.html" target="content">latihan var</a></li>
+              </ul>
+            </ul>
+            <li><b>Pertemuan 10
+                <ul>
+                    <li><a href="../Pertemuan10/latfunction.html" target="content">latihan function</a></li>
+                  </ul>
             <li><b>Latihan : </b>
               <ul>
                   <li><a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf" target="content">Latihan teori ERON GARFIL</a></li>
                   <li><a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf" target="content">Latihan teori ELLA AISIA</a></li>
             </li>
+            </li>
+        </li>
         </ul>
     </body>
     </html>
