--- a/indexBaru/menu.html
+++ b/indexBaru/menu.html
@@ -44,21 +44,25 @@
                     <li><a href="../Pertemuan7/latselectorbebas.html" target="content">latihan selector bebas</a></li>
                     <li><a href="../Pertemuan7/latselectorclass.html" target="content">latihan selector kelas</a></li>
                     <li><a href="../Pertemuan7/latselectorid.html" target="content">latihan selector ID</a></li>
-                    </ul>
+        </ul>
+             <li><b>Pertemuan 9
+            <ul>
+                <li><a href="../Pertemuan9/lat_if.html" target="content">latihan if</a></li>
+                <li><a href="../Pertemuan9/latihan.html" target="content">latihan latihan</a></li>
+                <li><a href="../Pertemuan9/latihan1.html" target="content">latihan 1</a></li>
+                <li><a href="../Pertemuan9/latoperator.html" target="content">latihan operator</a></li>
+                <li><a href="../Pertemuan9/latvar.html" target="content">latihan var</a></li>
+              </ul>
+            </ul>
+            <li><b>Pertemuan 10
+                <ul>
+                    <li><a href="../Pertemuan10/latfunction.html" target="content">latihan function</a></li>
+                  </ul>
             <li><b>Latihan : </b>
               <ul>
                   <li><a href="Teori Desain Web Pertemuan1_Eron Garfil.pdf" target="content">Latihan teori ERON GARFIL</a></li>
                   <li><a href="Teori Desain Web Pertemuan1_Ella Aisia.pdf" target="content">Latihan teori ELLA AISIA</a></li>
             </li>
-        </ul>
-             <li><b>Pertemuan 9
-            <ul>
-                <li><a href="../Pertemuan9/lat_if.html" target="content">latihan external</a></li>
-                <li><a href="../Pertemuan9/latihan.html" target="content">latihan halaman</a></li>
-                <li><a href="../Pertemuan9/latihan1.html" target="content">latihan selector</a></li>
-                <li><a href="../Pertemuan9/latoperator.html" target="content">latihan selector bebas</a></li>
-                <li><a href="../Pertemuan9/latvar.html" target="content">latihan selector kelas</a></li>
-              </ul>
             </li>
         </li>
         </ul>
